changed the published date

--- a/src/pages/posts/post-02.mdx
+++ b/src/pages/posts/post-02.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/PostLayout.astro
 title: Inabakumori - Relayouter, Analysis and Translation
-pubDate: 2023-04-01
+pubDate: 2023-09-15
 thumbnail: url('https://cdn.discordapp.com/attachments/1027882514548789279/1151503466682925137/F28HUFlbQAAHt5Z.png')
 description: Translation and essay on the song
 author: Vlusky
@@ -140,7 +140,7 @@ Likely a reference to Lost Umbrella. And it's not just the "umbrella", that song
 
 A not so subtle reference to Secret Elementary School Student. Which as we discussed prior, already has major connections to Relayouter. "Hiragana" being the most basic kind of [Japanese letters](https://en.wikipedia.org/wiki/Japanese_writing_system).
 
-It being "spelt with hiragana" could mean the person is trying to express it in very simple terms, so that even a child could understand what they mean.
+It being "in hiragana" could mean the person is trying to express it in very simple terms, so that even a child could understand what they mean.
 
 <br/>
 
