one final typo fix i can finally k

--- a/src/pages/posts/post-02.mdx
+++ b/src/pages/posts/post-02.mdx
@@ -37,7 +37,7 @@ This is "Osage-chan"
 
 She's absolutely adorable. Probably one of my favorite Vocaloid Producer OC. 
 
-I usually don't use Japanese prefixes when _talking_ in english, but just "Osage" is a bit weird lol. As it just means "twintails"
+I usually don't use Japanese suffixes when _talking_ in english, but just "Osage" is a bit weird lol. As it just means "twintails"
 
 For the laymen, you might've recognized Kaai Yuki's character from the Yukopi's Kyoufuu All Back Music Video
 
