migrate all image assets from discord to imgcdn

--- a/src/pages/posts/post-02.mdx
+++ b/src/pages/posts/post-02.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/PostLayout.astro
 title: Inabakumori - Relayouter, Analysis and Translation
 pubDate: 2023-09-15
-thumbnail: url('https://cdn.discordapp.com/attachments/1027882514548789279/1151503466682925137/F28HUFlbQAAHt5Z.png')
+thumbnail: url('https://s6.imgcdn.dev/ZJVYv.png')
 description: Translation and essay on the song
 author: Vlusky
 tags:
@@ -18,21 +18,21 @@ import Youtube from "../../components/interactive/Youtube.svelte"
 
 Relayouter was Inabakumori's entry to the [VOCALOID Collection 2023 Summer](https://vocaloid-collection.jp/about/) which is exactly what the name implies. It's a competition/event to celebrate VOCALOID and adjacent music.
 
-![the rankings](https://cdn.discordapp.com/attachments/1027882514548789279/1151502212191752234/image.png)
+![the rankings](https://s6.imgcdn.dev/ZJ9tg.png)
 It got first place, surprisingly enough.
 
 Shout out to CeVIO [ROSE](https://cevio.fandom.com/wiki/ROSE) & [POPY](https://cevio.fandom.com/wiki/POPY)
 
 ## Kaai Yuki
 
-![Relayouter's image cover](https://cdn.discordapp.com/attachments/1027882514548789279/1151503466682925137/F28HUFlbQAAHt5Z.png)
+![Relayouter's image cover](https://s6.imgcdn.dev/ZJVYv.png)
 Wow look at all those Kaai Yuki's
 
 Being basically a celebration for vocaloid, this song is a bit different than Ina's other songs. Well, the cover girl is different at least. It's actually Kaai Yuki herself instead of his (and NKNK_NGRMS's) OC Osage-chan.
 
 Kaai Yuki being the actual voice bank Inaba used.
 
-![a character with a baggy jacket](https://cdn.discordapp.com/attachments/1027882514548789279/1151899001826844672/osage-nyan.gif)
+![a character with a baggy jacket](https://s6.imgcdn.dev/ZJfKN.gif)
 This is "Osage-chan"
 
 She's absolutely adorable. Probably one of my favorite Vocaloid Producer OC. 
@@ -54,7 +54,7 @@ This song takes a few cues from [Secret Elementary School Student](https://www.y
 
 This was also shown in how the lyrics are written. It only uses kanji a Japanese first grader could understand.
 
-![cover image for secret elementary school student by inabakumori](https://cdn.discordapp.com/attachments/1027882514548789279/1151516336288182323/image.png)
+![cover image for secret elementary school student by inabakumori](https://s6.imgcdn.dev/ZJtOq.png)
 wait that character looks familiar...
 
 Yep! That is Kaai Yuki! The song was made for Yuki's 10th anniversary. So the song being about an "elementary school student" suddenly makes a lot more sense. And so too is Relayouter's apparent theme.
@@ -151,7 +151,7 @@ Is connected to Lagtrain. Specifically the bit about ["My occupied hands are hol
 
 <br/>
 
-![a youtube comment](https://cdn.discordapp.com/attachments/1027882514548789279/1151896759065378926/image.png)
+![a youtube comment](https://s6.imgcdn.dev/ZJWEB.png)
 I stole this bit from [this comment](https://www.youtube.com/watch?v=b56xjtP6Qac&lc=UgxAYMZvjc6yiQhOi7t4AaABAg) lol
 
 It also mentioned the distinction between that あたし (atashi) and 僕 (boku).
