added very important info about kaai yuki!

--- a/src/pages/posts/post-02.mdx
+++ b/src/pages/posts/post-02.mdx
@@ -59,7 +59,7 @@ wait that character looks familiar...
 
 Yep! That is Kaai Yuki! The song was made for Yuki's 10th anniversary. So the song being about an "elementary school student" suddenly makes a lot more sense. And so too is Relayouter's apparent theme.
 
-For reference, [Yuki is canonically 9](https://vocaloid.fandom.com/wiki/Kaai_Yuki). Do what you will with this information.
+For reference, [Yuki is canonically 9 and is actually voiced by a grade schooler](https://vocaloid.fandom.com/wiki/Kaai_Yuki). Do what you will with this information.
 
 In Relayouter, they didn't use that "easy kanji's for first grade japanese" thing. This could imply that Yuki has grown a bit since _Secret Elementary School Student_. But it still very much revolves around the idea of learning how the world works. This time it's a bit more towards "human emotions".
 
